--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^6.24",
         "stripe/stripe-php": "^14.9"
     },
     "require-dev": {
